deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yanistest2
name: yanistest2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yanistest2
  template:
    metadata:
      labels:
        app: yanistest2
    spec:
      containers:
      - name: yanistest2
        image: ghcr.io/bbhe11/auftrag6:v1
        ports:
        - containerPort: 8080
