Service Kurz .YAML
apiVersion: v1
kind: Service
metadata:
  name: yanistest2
spec:
  selector:
    app: yanistest2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
