service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
    tier: database
  ports:
    - name: 3306-tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
